fixes usync loading, utils lib linking

--- a/src/lslunitsync/CMakeLists.txt
+++ b/src/lslunitsync/CMakeLists.txt
@@ -22,4 +22,4 @@ ADD_LIBRARY(lsl-unitsync STATIC ${libUnitsyncHeader} ${libUnitsyncSrc} )
 if( WIN32 )
 	TARGET_LINK_LIBRARIES(lsl-unitsync dl )
 endif()
-TARGET_LINK_LIBRARIES(lsl-unitsync ${Boost_LIBRARIES} ${PNG_LIBRARY})
+TARGET_LINK_LIBRARIES(lsl-unitsync lsl-utils ${Boost_LIBRARIES} ${PNG_LIBRARY})
