--- a/src/lslutils/CMakeLists.txt
+++ b/src/lslutils/CMakeLists.txt
@@ -19,5 +19,11 @@ LIST( APPEND libSpringLobbyUtilsHeader ${templatesources} )
 set_source_files_properties(  ${libSpringLobbyUtilsHeader} PROPERTIES HEADER_FILE_ONLY 1 )
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
+if(WIN32)
+	add_definitions(
+			-D_WIN32_WINNT=0x0501
+			-DBOOST_THREAD_USE_LIB
+		)
+endif()
 ADD_LIBRARY(lsl-utils STATIC ${libSpringLobbyHeader} ${libSpringLobbyUtilsSrc} )
 TARGET_LINK_LIBRARIES(lsl-utils ${Boost_THREAD_LIBRARY})
