--- a/src/lslunitsync/CMakeLists.txt
+++ b/src/lslunitsync/CMakeLists.txt
@@ -16,10 +16,11 @@ LIST( APPEND libUnitsyncHeader ${templatesources} )
 set_source_files_properties(  ${libUnitsyncHeader} PROPERTIES HEADER_FILE_ONLY 1 )
 	
 #cimage deps
-FIND_PACKAGE( PNG REQUIRED)
+FIND_PACKAGE(PNG REQUIRED)
+FIND_PACKAGE(X11 REQUIRED)
 ADD_DEFINITIONS( -Dcimg_use_png )
 ADD_LIBRARY(lsl-unitsync STATIC ${libUnitsyncHeader} ${libUnitsyncSrc} )
 if( WIN32 )
-	TARGET_LINK_LIBRARIES(lsl-unitsync dl )
+	TARGET_LINK_LIBRARIES(lsl-unitsync ${CMAKE_DL_LIBS})
 endif()
-TARGET_LINK_LIBRARIES(lsl-unitsync lsl-utils ${Boost_LIBRARIES} ${PNG_LIBRARY})
+TARGET_LINK_LIBRARIES(lsl-unitsync lsl-utils ${Boost_LIBRARIES} ${PNG_LIBRARY} ${X11_LIBRARIES})
