add option WX_HELPER to enable wx helper functions
partly improves linker errors

--- a/src/lslutils/CMakeLists.txt
+++ b/src/lslutils/CMakeLists.txt
@@ -27,3 +27,7 @@ if(WIN32)
 endif()
 ADD_LIBRARY(lsl-utils STATIC ${libSpringLobbyHeader} ${libSpringLobbyUtilsSrc} )
 TARGET_LINK_LIBRARIES(lsl-utils ${Boost_THREAD_LIBRARY})
+set_target_properties(lsl-utils PROPERTIES
+		LINK_FLAGS "${WX_LD_FLAGS}"
+	)
+
