--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,14 @@ ENDIF ( EXISTS ${libSpringLobby_BINARY_DIR}/libSpringLobby_config.h  OR  EXISTS 
 INCLUDE_DIRECTORIES(${libSpringLobby_SOURCE_DIR}/lib)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 
+INCLUDE (CheckFunctionExists)
+
+SET(CMAKE_REQUIRED_INCLUDES stdio.h)
+CHECK_FUNCTION_EXISTS(fmemopen HAVE_FMEMOPEN)
+IF(HAVE_FMEMOPEN)
+	ADD_DEFINITIONS(-DHAVE_FMEMOPEN)
+ENDIF(HAVE_FMEMOPEN)
+
 add_subdirectory( lslutils )
 if (LSLSERVER)
 	add_subdirectory( lsl )
