try to fix compile

--- a/src/lslunitsync/CMakeLists.txt
+++ b/src/lslunitsync/CMakeLists.txt
@@ -22,7 +22,4 @@ FIND_PACKAGE(PNG REQUIRED)
 FIND_PACKAGE(X11 REQUIRED)
 ADD_DEFINITIONS( -Dcimg_use_png )
 ADD_LIBRARY(lsl-unitsync STATIC ${libUnitsyncHeader} ${libUnitsyncSrc} )
-if( WIN32 )
-	TARGET_LINK_LIBRARIES(lsl-unitsync ${CMAKE_DL_LIBS})
-endif()
-TARGET_LINK_LIBRARIES(lsl-unitsync lsl-utils ${Boost_LIBRARIES} ${PNG_LIBRARY} ${X11_LIBRARIES})
+TARGET_LINK_LIBRARIES(lsl-unitsync lsl-utils ${Boost_LIBRARIES} ${PNG_LIBRARY} ${X11_LIBRARIES} ${CMAKE_DL_LIBS})
