remove unused define

--- a/src/lslextract/CMakeLists.txt
+++ b/src/lslextract/CMakeLists.txt
@@ -21,7 +21,7 @@ add_executable(lslextract
 FIND_PACKAGE(PNG REQUIRED)
 FIND_PACKAGE(X11 REQUIRED)
 
-remove_definitions(-DHAVE_WX -D__WXDEBUG__ -D__WXGTK__ -DHAVE_SPRINGLOBBY=1 -DENABLE_DEBUG_REPORT-DHAVE_CONFIG_H  -DHAVE_LIBNOTIFY)
+remove_definitions(-DHAVE_WX -D__WXDEBUG__ -D__WXGTK__ -DHAVE_SPRINGLOBBY=1 -DHAVE_CONFIG_H  -DHAVE_LIBNOTIFY)
 TARGET_LINK_LIBRARIES(lslextract
 	${Boost_LIBRARIES}
 	${PNG_LIBRARY}
