--- a/src/lslutils/CMakeLists.txt
+++ b/src/lslutils/CMakeLists.txt
@@ -18,7 +18,6 @@ SET( templatesources
 )
 LIST( APPEND libSpringLobbyUtilsHeader ${templatesources} )
 set_source_files_properties(  ${libSpringLobbyUtilsHeader} PROPERTIES HEADER_FILE_ONLY 1 )
-INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 if(WIN32)
 	add_definitions(
@@ -28,4 +27,9 @@ if(WIN32)
 endif()
 ADD_LIBRARY(lsl-utils STATIC ${libSpringLobbyHeader} ${libSpringLobbyUtilsSrc} )
 TARGET_LINK_LIBRARIES(lsl-utils ${Boost_THREAD_LIBRARY})
+target_include_directories(lsl-utils
+		PRIVATE ${Boost_INCLUDE_DIRS}
+		PRIVATE ${libSpringLobby_SOURCE_DIR}/src
+	)
+
 
