--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 language: cpp
 compiler:
+#  - clang  # boost is broken: https://svn.boost.org/trac/boost/ticket/6198
   - gcc
+
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test # gcc
+  - sudo add-apt-repository -y ppa:george-edison55/precise-backports #cmake
+  - sudo apt-get update -q
+
+install:
+  - sudo apt-get install gcc-4.7 g++-4.7 cmake cmake-data
+
 before_script:
   - sudo apt-get install libboost-thread-dev libboost-system-dev libboost-filesystem-dev spring
   - cmake -DBUILD_TESTS=ON .
