--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,3 +118,21 @@ if (${BUILD_TESTS})
 	enable_testing()
 	add_subdirectory( test )
 endif()
+
+find_program(CLANG_FORMAT_BINARY NAMES clang-format-3.5 clang-format-3.4 clang-format)
+if (EXISTS ${CLANG_FORMAT_BINARY})
+        file(GLOB_RECURSE files {CMAKE_CURRENT_SOURCE_DIR} *.cpp *.hpp *.h)
+
+        foreach(exclude lib ) # exclude some files
+                foreach(file in ${files})
+                        if (file MATCHES "^${CMAKE_CURRENT_SOURCE_DIR}/${exclude}")
+                                list(REMOVE_ITEM files ${file})
+                        endif()
+                endforeach()
+        endforeach()
+        add_custom_target(format COMMAND ${CLANG_FORMAT_BINARY} -i ${files})
+else()
+        message(WARNING "clang-format not found")
+endif()
+
+
