--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,7 +130,7 @@ if (EXISTS ${CLANG_FORMAT_BINARY})
                         endif()
                 endforeach()
         endforeach()
-        add_custom_target(format COMMAND ${CLANG_FORMAT_BINARY} -i ${files})
+        add_custom_target(format-lsl COMMAND ${CLANG_FORMAT_BINARY} -i ${files})
 else()
         message(WARNING "clang-format not found")
 endif()
