fix lslextract compile

--- a/src/lslextract/CMakeLists.txt
+++ b/src/lslextract/CMakeLists.txt
@@ -2,6 +2,7 @@ message(STATUS ${libUnitsyncSrc})
 
 add_executable(lslextract
 	lslextract.cpp
+	${libjsonsrc}
 )
 FIND_PACKAGE(PNG REQUIRED)
 FIND_PACKAGE(X11 REQUIRED)
@@ -14,8 +15,10 @@ TARGET_LINK_LIBRARIES(lslextract
 	${PNG_LIBRARY}
 	${X11_LIBRARIES}
 	${CMAKE_DL_LIBS}
+	${LIB_JSON_CPP}
 )
 
 target_include_directories(lslextract
 	PRIVATE ${libSpringLobby_SOURCE_DIR}/src
+	PRIVATE ${Jsoncpp_INCLUDE_DIR}
 )
