--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ before_install:
 
 install:
   - sudo apt-get install gcc-4.7 g++-4.7 cmake cmake-data
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 90;
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 90;
 
 before_script:
   - sudo apt-get install libboost-thread1.55-dev libboost-system1.55-dev libboost-filesystem1.55-dev spring
