--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,13 @@ cmake_install.cmake
 CMakeFiles/
 /libSpringLobby.cbp
 /libSpringLobby_config.h
+*.swp
+/src/lslextract/lslextract
+/build.ninja
+/rules.ninja
+/.ninja_deps
+/.ninja_log
+/CMakeCache.txt
+/CPackConfig.cmake
+/CPackSourceConfig.cmake
+
