--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,11 @@ compiler:
   - clang
   - gcc
 
-before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test # gcc
-  - sudo add-apt-repository -y ppa:george-edison55/precise-backports #cmake
-  - sudo add-apt-repository --yes ppa:boost-latest/ppa
-  - sudo apt-get update -q
+sudo: required
+dist: trusty
 
 install:
-  - sudo apt-get install gcc-4.7 g++-4.7 cmake cmake-data
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.7 90;
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 90;
-
-before_script:
-  - sudo apt-get install libboost-thread1.55-dev libboost-system1.55-dev libboost-filesystem1.55-dev spring
+  - sudo apt-get install -y libboost-thread1.55-dev libboost-system1.55-dev libboost-filesystem1.55-dev spring
   - cmake -DBUILD_TESTS=ON .
 script:
   - make && make check
